fix: scrollbar styling

--- a/src/styles.css
+++ b/src/styles.css
@@ -1095,3 +1095,20 @@ textarea.materialize-textarea {
 .leaflet-container.editing {
 	cursor: not-allowed !important;
 }
+
+/* theme scrollbar */
+::-webkit-scrollbar {
+	width: 9px;
+}
+::-webkit-scrollbar-track {
+	background: transparent;
+}
+::-webkit-scrollbar-thumb {
+	background-color: rgba(155, 155, 155, 0.5);
+	border-radius: 20px;
+	border: transparent;
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background-color: rgba(155, 155, 155, 0);
+}
